--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto social</title>
 </head>
 <body>
-    <h1>social</h1>
+    <main>
+        <section id="telefone">
+            <img src="../imagens/frame-iphone.png" alt="frame-iphone">
+        </section>
+        <section>
+
+        </section>
+    </main>
 </body>
 </html>
