--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <section id="telefone">
-            <img src="../imagens/frame-iphone.png" alt="frame-iphone">
+            <img src="imagens/frame-iphone.png" alt="frame-iphone">
         </section>
         <section>
 
