--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <section id="telefone">
-            <img src="imagens/frame-iphone.png" alt="frame-iphone">
+           <iframe src="home.html" name="tela" id="tela"></iframe>
         </section>
         <section>
 
