--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
         <section id="telefone">
            <iframe src="home.html" name="tela" id="tela"></iframe>
         </section>
-        <section>
-
+        <section id="rede-social">
+            <a href="#"><img src="imagens/logo-facebook.jpg" alt="logo-facebook"></a> <br>
+            <a href="#"><img src="imagens/logo-github.jpg" alt="logo-github"></a> <br>
+            <a href="#"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"></a> <br>
+            <a href="#"><img src="imagens/logo-twitter.jpg" alt="logo-twitter"></a> <br>
+            <a href="#"><img src="imagens/logo-youtube.jpg" alt="logo-youtube"></a> <br>
+            <a href="#"><img src="imagens/logo-home.jpg" alt="logo-home"></a>   
         </section>
     </main>
 </body>
