--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         <section id="telefone">
            <iframe src="home.html" name="tela" id="tela"></iframe>
         </section>
+
         <section id="rede-social">
-            <a href="#"><img src="imagens/logo-facebook.jpg" alt="logo-facebook"></a> <br>
-            <a href="#"><img src="imagens/logo-github.jpg" alt="logo-github"></a> <br>
-            <a href="#"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"></a> <br>
-            <a href="#"><img src="imagens/logo-twitter.jpg" alt="logo-twitter"></a> <br>
-            <a href="#"><img src="imagens/logo-youtube.jpg" alt="logo-youtube"></a> <br>
-            <a href="#"><img src="imagens/logo-home.jpg" alt="logo-home"></a>   
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg"></a> <br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg"></a> <br>
+            <a href="instragram.html" target="tela"><img src="imagens/logo-instagram.jpg"></a> <br>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg"></a> <br>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg"></a> <br>
+            <a href="face.html" target="tela"><img src="imagens/logo-facebook.jpg"></a>   
         </section>
     </main>
 </body>
